<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.piets.hockeymanagement.Register_Activity">

    <EditText
        android:id="@+id/edt_email_register"
        android:inputType="textEmailAddress"
        android:layout_width="@dimen/edt_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginBottom="@dimen/dp_5"
        android:drawableStart="@drawable/ic_email"
        android:layout_gravity="center_horizontal"
        android:fontFamily="monospace"
        android:drawablePadding="@dimen/dp_15"
        android:hint="@string/edt_email_address_hint"
        />

    <EditText
        android:id="@+id/edt_name_register"
        android:layout_width="@dimen/edt_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_5"
        android:drawableStart="@drawable/ic_user"
        android:layout_gravity="center_horizontal"
        android:fontFamily="monospace"
        android:drawablePadding="@dimen/dp_15"
        android:hint="@string/edt_name_hint"
        />

    <EditText
        android:id="@+id/edt_surname_register"
        android:layout_width="@dimen/edt_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_5"
        android:drawableStart="@drawable/ic_user"
        android:layout_gravity="center_horizontal"
        android:fontFamily="monospace"
        android:drawablePadding="@dimen/dp_15"
        android:hint="@string/edt_surname_hint"
        />

    <EditText
        android:id="@+id/edt_password_register"
        android:layout_width="@dimen/edt_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_5"
        android:drawableStart="@drawable/ic_lock"
        android:layout_gravity="center_horizontal"
        android:fontFamily="monospace"
        android:drawablePadding="@dimen/dp_15"
        android:hint="@string/edt_password_hint"
        />

    <EditText
        android:id="@+id/edt_retype_password_register"
        android:layout_width="@dimen/edt_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_5"
        android:drawableStart="@drawable/ic_lock"
        android:layout_gravity="center_horizontal"
        android:fontFamily="monospace"
        android:drawablePadding="@dimen/dp_15"
        android:hint="@string/edt_retype_password_hint"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="@dimen/btn_custom_width"
        android:layout_height="@dimen/btn_custom_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_25"
        android:background="@drawable/rounded_button"
        android:shadowColor="@color/colorAccent"
        android:text="@string/btn_register"
        android:textColor="@color/primaryText"
        />


</LinearLayout>
