<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.piets.hockeymanagement.Admin.AdminMenu_Activity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_150"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@mipmap/ic_logo_foreground"
        android:layout_marginTop="@dimen/dp_15"/>

    <TextView
        android:id="@+id/tv_user_logged_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_5"/>

    <TextView
        android:id="@+id/tv_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_admin"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_add_team_admin"
        android:layout_width="@dimen/btn_custom_width"
        android:layout_height="@dimen/btn_custom_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_25"
        android:background="@drawable/rounded_button"
        android:shadowColor="@color/colorAccent"
        android:text="@string/btn_add_team_admin"
        android:textColor="@color/primaryText"
        android:onClick="adminMenu_Click"
        />

    <Button
        android:id="@+id/btn_move_admin"
        android:layout_width="@dimen/btn_custom_width"
        android:layout_height="@dimen/btn_custom_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/rounded_button"
        android:shadowColor="@color/colorAccent"
        android:text="@string/btn_move_players"
        android:textColor="@color/primaryText"
        android:onClick="adminMenu_Click"/>

    <Button
        android:id="@+id/btn_set_admin"
        android:layout_width="@dimen/btn_custom_width"
        android:layout_height="@dimen/btn_custom_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/rounded_button"
        android:shadowColor="@color/colorAccent"
        android:text="@string/btn_set_roles"
        android:textColor="@color/primaryText"
        android:onClick="adminMenu_Click" />

    <Button
        android:id="@+id/btn_coach_admin"
        android:layout_width="@dimen/btn_custom_width"
        android:layout_height="@dimen/btn_custom_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/rounded_button"
        android:shadowColor="@color/colorAccent"
        android:text="@string/btn_coach_menu"
        android:textColor="@color/primaryText"
        android:onClick="adminMenu_Click"/>

</LinearLayout>
